레시피 오픈서치 적용